--- a/Project_ASP.NET/wwwroot/css/site.css
+++ b/Project_ASP.NET/wwwroot/css/site.css
@@ -2,17 +2,18 @@ html {
   font-size: 14px;
 }
 
-@media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
+@media (min-width: 768px){
+    html {
+        font-size: 16px:
+    }
 }
-
 html {
-  position: relative;
-  min-height: 100%;
+    position: relative;
+    min-height: 100%;
 }
 
 body {
-  margin-bottom: 60px;
+ 
+    margin-bottom: 60px;
+    background: pink;
 }
