--- a/Project_ASP.NET/Views/Profile/Index.cshtml
+++ b/Project_ASP.NET/Views/Profile/Index.cshtml
@@ -8,4 +8,14 @@
     <label asp-for="Name"></label>
     <input asp-for="Name"/>
     <span asp-validation-for="Name"></span>
+    
+    <label asp-for="Surname"></label>
+    <input asp-for="Surname" />
+    <span asp-validation-for="Surname"></span>
+   
+    <label asp-for="PhoneNumber"></label>
+    <input asp-for="PhoneNumber" />
+    <span asp-validation-for="PhoneNumber"></span>
+
+    <input type="submit" value="LogIn" />
 </form>
