--- a/Project_ASP.NET/Views/Shared/_Layout.cshtml
+++ b/Project_ASP.NET/Views/Shared/_Layout.cshtml
@@ -4,6 +4,9 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - Project_ASP.NET</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+    <link href="~/css/Style.css" rel="stylesheet" type="text/css" />
+
     
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     
