--- a/Project_ASP.NET/Views/Procedures/Details.cshtml
+++ b/Project_ASP.NET/Views/Procedures/Details.cshtml
@@ -5,54 +5,49 @@
 <div class="row text">
     <div class="col-md-8 offset-2">
         <p>
-            <h1>Add a New Procedure</h1>
+            <h1>Details for @Model.Name</h1>
         </p>
         <div class="row">
             <div class="col-md-8 offset-2">
-                <form asp-action="Create">
-                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+               
+                   
                     <div class="form-group text-center">
-                        <img id="imgPreview" class="border-info rounded-circle" style="max-width: 150px" />
+                        <img class="border-info rounded-circle" style="max-width: 150px" id="imgPreview" />
                     </div>
                     <div class="form-group">
                         <label asp-for="img" class="control-label"></label>
-                        <input asp-for="img" class="form-control" />
+                        <input asp-for="img" class="form-control" readonly/>
                         <span asp-validation-for="img" class="text-danger"></span>
                     </div>
                     <div class="form-group">
                         <label asp-for="Name" class="control-label"></label>
-                        <input asp-for="Name" class="form-control" />
+                        <input asp-for="Name" class="form-control" readonly/>
                         <span asp-validation-for="Name" class="text-danger"></span>
                     </div>
                     <div class="form-group">
                         <label asp-for="Desc" class="control-label"></label>
-                        <input asp-for="Desc" class="form-control" />
+                        <input asp-for="Desc" class="form-control" readonly />
                         <span asp-validation-for="Desc" class="text-danger"></span>
                     </div>
                     <div class="form-group">
                         <label asp-for="price" class="control-label"></label>
-                        <input asp-for="price" class="form-control" />
+                        <input asp-for="price" class="form-control" readonly/>
                         <span asp-validation-for="price" class="text-danger"></span>
                     </div>
                     <div class="form-group">
-                        <input type="submit" value="Create" class="btn btn-outline-success float-right" />
+                        <a class="btn btn-outline-success float-right" asp-action="Edit" asp-route-id="@Model.ProcedureId">Edit</a>
                         <a class="btn btn-outline-secondary" asp-action="Index">Show All</a>
                     </div>
-            </form>
+                
             </div>
         </div>
     </div>
 </div>
 @section Scripts{
     <script>
-        $(document).ready(function() { 
-             var output = document.getElementById('imgPreview');
-            output.src = $("#img").val();
-        })
-
-        $("#img").on("change", function (){
+        $(document).ready(function () {
             var output = document.getElementById('imgPreview');
-            output.src = $(this).val();
+            output.src = $("#img").val();
         })
     </script>
 }
