--- a/Project_ASP.NET/Views/Clients/Edit.cshtml
+++ b/Project_ASP.NET/Views/Clients/Edit.cshtml
@@ -1,13 +1,13 @@
-﻿@model Procedure
+﻿@model Client
 
 @{
-    ViewData["Title"] = "Update procedure";
+    ViewData["Title"] = "Update client";
 }
 
 <div class="row text">
     <div class="col-md-8 offset-2">
         <p>
-            <h1>Update Procedure</h1>
+            <h1>Update Client</h1>
         </p>
         <div class="row">
             <div class="col-md-8 offset-2">
@@ -17,25 +17,32 @@
                     <div class="form-group text-center">
                         <img id="imgPreview" class="border-info rounded-circle" style="max-width: 150px" />
                     </div>
+
                     <div class="form-group">
                         <label asp-for="Name" class="control-label"></label>
                         <input asp-for="Name" class="form-control" />
                         <span asp-validation-for="Name" class="text-danger"></span>
                     </div>
                     <div class="form-group">
-                        <label asp-for="Desc" class="control-label"></label>
-                        <input asp-for="Desc" class="form-control" />
-                        <span asp-validation-for="Desc" class="text-danger"></span>
+                        <label asp-for="Surname" class="control-label"></label>
+                        <input asp-for="Surname" class="form-control" />
+                        <span asp-validation-for="Surname" class="text-danger"></span>
+                    </div>
+
+                    <div class="form-group">
+                        <label asp-for="PhoneNumber" class="control-label"></label>
+                        <input asp-for="PhoneNumber" class="form-control" />
+                        <span asp-validation-for="PhoneNumber" class="text-danger"></span>
                     </div>
                     <div class="form-group">
-                        <label asp-for="img" class="control-label"></label>
-                        <input asp-for="img" class="form-control" />
-                        <span asp-validation-for="img" class="text-danger"></span>
+                        <label asp-for="Email" class="control-label"></label>
+                        <input asp-for="Email" class="form-control" />
+                        <span asp-validation-for="Email" class="text-danger"></span>
                     </div>
                     <div class="form-group">
-                        <label asp-for="price" class="control-label"></label>
-                        <input asp-for="price" class="form-control" />
-                        <span asp-validation-for="price" class="text-danger"></span>
+                        <label asp-for="Password" class="control-label"></label>
+                        <input asp-for="Password" class="form-control" />
+                        <span asp-validation-for="Password" class="text-danger"></span>
                     </div>
 
                     <div class="form-group">
