--- a/Project_ASP.NET/Views/Masters/Edit.cshtml
+++ b/Project_ASP.NET/Views/Masters/Edit.cshtml
@@ -1,43 +1,32 @@
-﻿@model Procedure
+﻿@model Master
 
 @{
-    ViewData["Title"] = "Update procedure";
+    ViewData["Title"] = "Update master";
 }
 
 <div class="row text">
     <div class="col-md-8 offset-2">
         <p>
-            <h1>Update Procedure</h1>
+            <h1>Update Master</h1>
         </p>
         <div class="row">
             <div class="col-md-8 offset-2">
                 <form asp-action="Edit">
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-
                     <div class="form-group text-center">
                         <img id="imgPreview" class="border-info rounded-circle" style="max-width: 150px" />
                     </div>
+                    
                     <div class="form-group">
                         <label asp-for="Name" class="control-label"></label>
                         <input asp-for="Name" class="form-control" />
                         <span asp-validation-for="Name" class="text-danger"></span>
                     </div>
                     <div class="form-group">
-                        <label asp-for="Desc" class="control-label"></label>
-                        <input asp-for="Desc" class="form-control" />
-                        <span asp-validation-for="Desc" class="text-danger"></span>
+                        <label asp-for="Bio" class="control-label"></label>
+                        <input asp-for="Bio" class="form-control" />
+                        <span asp-validation-for="Bio" class="text-danger"></span>
                     </div>
-                    <div class="form-group">
-                        <label asp-for="img" class="control-label"></label>
-                        <input asp-for="img" class="form-control" />
-                        <span asp-validation-for="img" class="text-danger"></span>
-                    </div>
-                    <div class="form-group">
-                        <label asp-for="price" class="control-label"></label>
-                        <input asp-for="price" class="form-control" />
-                        <span asp-validation-for="price" class="text-danger"></span>
-                    </div>
-
                     <div class="form-group">
                         <input type="submit" value="Update" class="btn btn-outline-success float-right" />
                         <a class="btn btn-outline-secondary" asp-action="Index">Show All</a>
