--- a/Project_ASP.NET/Views/Procedures/Index.cshtml
+++ b/Project_ASP.NET/Views/Procedures/Index.cshtml
@@ -48,7 +48,4 @@
         </table>
     </div>
 </div>
-<div style="position: fixed; right: 25px; bottom: 25px";class="text-white">
-    <a asp-controller="Procedures" asp-action="Create" class="btn btn-success">
-        <i class="bi bi-plus-circle"></i>Add New</a>
-</div>
+@await Html.PartialAsync("_CreateItem","Procedures" )
