--- a/Project_ASP.NET/Views/Shared/_Layout.cshtml
+++ b/Project_ASP.NET/Views/Shared/_Layout.cshtml
@@ -43,8 +43,28 @@
                         <button class="btn btn-outline-success my-2 my-sm-0" type="submit"><i class="bi bi-search"></i></button>
                     </form>
 
+                    <a class="btn btn-outline-success my-2 my-sm-0"asp-controller="Account" asp-action="Login">
+                        <i class="bi bi-box-arrow-in-right"></i> Log in
+                    </a>
+
+                    <a class="btn btn-outline-primary my-2 my-sm-0" asp-controller="Account" asp-action="Register">
+                        <i class="bi bi-person-plus"></i> Register
+                    </a>
 
 
+                    @*User profile section*@
+                    <div class="dropdown">
+                        <button class="btn btn-outline-success dropdown-toggle" type="button" id="profile-btn" aria-expanded="false">
+                            <i class="bi bi-person-badge"></i> Hello User
+                        </button>
+                        <ul class="dropdown-menu" aria-labelledby="profile-btn">
+                           @* <li>
+                                <a class="dropdown-item" asp-action="Index">
+                                    <i class="bg-info bi-list"></i>
+                                </a>
+                            </li>*@
+                        </ul>
+                    </div>
 
                 </div>
             </div>
