--- a/Project_ASP.NET/Views/Clients/Details.cshtml
+++ b/Project_ASP.NET/Views/Clients/Details.cshtml
@@ -42,8 +42,12 @@
                     <span asp-validation-for="Password" class="text-danger"></span>
                 </div>
                     <div class="form-group">
+                    @if (User.Identity.IsAuthenticated && User.IsInRole("Admin"))
+                        {
                         <a class="btn btn-outline-success float-right" asp-action="Edit" asp-route-id="@Model.ClientId">Edit</a>
+                        }
                         <a class="btn btn-outline-secondary" asp-action="Index">Show All</a>
+                        
                     </div>
                 
             </div>
