--- a/Project_ASP.NET/Views/Clients/Index.cshtml
+++ b/Project_ASP.NET/Views/Clients/Index.cshtml
@@ -19,7 +19,10 @@
                     <th>@Html.DisplayNameFor(model => model.PhoneNumber)</th>
                     <th>@Html.DisplayNameFor(model => model.Email)</th>
                     <th>@Html.DisplayNameFor(model => model.Password)</th>
-                    <th>Actions</th>
+                    @if (User.Identity.IsAuthenticated && User.IsInRole("Admin"))
+                    {
+                        <th>Actions</th>
+                    }
                 </tr>
             </thead>
             <tbody>
@@ -41,11 +44,15 @@
                         <td class="align-middle">
                             @Html.DisplayFor(modelItem => item.Password)
                         </td>
-                        <td class="align-middle">
-                            <a class="btn btn-outline-primary"><i class="bi bi-pencil-square"></i>Edit</a>
-                            <a class="btn btn-outline-info"><i class="bi bi-eye"></i>Details</a>
-                            <a class="btn btn-danger"><i class="bi bi-trash"></i>Delete</a>
-                        </td>
+                        @if (User.Identity.IsAuthenticated && User.IsInRole("Admin"))
+                        {
+                            <td class="align-middle">
+                                <a class="btn btn-outline-primary"><i class="bi bi-pencil-square"></i>Edit</a>
+                                <a class="btn btn-outline-info"><i class="bi bi-eye"></i>Details</a>
+                                <a class="btn btn-danger"><i class="bi bi-trash"></i>Delete</a>
+                            </td>
+                        }
+                        
                     </tr>
                 }
             </tbody>
