--- a/Project_ASP.NET/Views/Procedures/Details.cshtml
+++ b/Project_ASP.NET/Views/Procedures/Details.cshtml
@@ -35,7 +35,10 @@
                         <span asp-validation-for="price" class="text-danger"></span>
                     </div>
                     <div class="form-group">
+                         @if (User.Identity.IsAuthenticated && User.IsInRole("Admin"))
+                         {
                         <a class="btn btn-outline-success float-right" asp-action="Edit" asp-route-id="@Model.ProcedureId">Edit</a>
+                         }
                         <a class="btn btn-outline-secondary" asp-action="Index">Show All</a>
                     </div>
                 
