--- a/Project_ASP.NET/Views/Procedures/Index.cshtml
+++ b/Project_ASP.NET/Views/Procedures/Index.cshtml
@@ -18,7 +18,10 @@
                     <th>@Html.DisplayNameFor(model => model.Desc)</th>
                     <th>@Html.DisplayNameFor(model => model.img)</th>
                     <th>@Html.DisplayNameFor(model => model.price)</th>
-                    <th>Actions</th>
+                    @if (User.Identity.IsAuthenticated && User.IsInRole("Admin"))
+                    {
+                        <th>Actions</th>
+                    }
                 </tr>
             </thead>
             <tbody>
@@ -37,11 +40,14 @@
                         <td class="align-middle">
                             @Html.DisplayFor(modelItem => item.price)
                         </td>
-                        <td class="align-middle">
-                            <a class="btn btn-outline-primary" asp-action="Edit" asp-route-id="@item.ProcedureId"><i class="bi bi-pencil-square"></i>Edit</a>
-                            <a class="btn btn-outline-info" asp-action="Details" asp-route-id="@item.ProcedureId"><i class="bi bi-eye"></i>Details</a>
-                            <a class="btn btn-danger" asp-action="Delete" asp-route-id="@item.ProcedureId"><i class="bi bi-trash"></i>Delete</a>
-                        </td>
+                        @if (User.Identity.IsAuthenticated && User.IsInRole("Admin"))
+                        {
+                            <td class="align-middle">
+                                <a class="btn btn-outline-primary" asp-action="Edit" asp-route-id="@item.ProcedureId"><i class="bi bi-pencil-square"></i>Edit</a>
+                                <a class="btn btn-outline-info" asp-action="Details" asp-route-id="@item.ProcedureId"><i class="bi bi-eye"></i>Details</a>
+                                <a class="btn btn-danger" asp-action="Delete" asp-route-id="@item.ProcedureId"><i class="bi bi-trash"></i>Delete</a>
+                            </td>
+                        }
                     </tr>
                 }
             </tbody>
