--- a/Project_ASP.NET/Views/Shared/_Layout.cshtml
+++ b/Project_ASP.NET/Views/Shared/_Layout.cshtml
@@ -23,19 +23,20 @@
                             <a class="nav-link text-dark" asp-controller="Reservations" asp-action="Index"> <i class="badge-info bi-service"></i>Reservations</a>
                         </li>
                         
-                        <li class="nav-item dropdown">
-
-                            
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                <i class="bi bi-gear"></i> Management
-                            </a>
-                            <ul class="dropdown-menu dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                                <li><a asp-controller="Clients" asp-action="Index" class="dropdown-item"><i class="bi bi-file-person"></i> Clients</a></li>
-                                <li><a asp-controller="Masters" asp-action="Index" class="dropdown-item"><i class="bi bi-emoji-smile"></i> Masters</a></li>
-                                <li><a asp-controller="Procedures" asp-action="Index" class="dropdown-item"><i class="bi bi-hand-thumbs-up"></i> Procedures</a></li>
-                            </ul>
-
-                        </li>
+                        @if(User.Identity.IsAuthenticated && User.IsInRole("Admin"))
+                        {
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    <i class="bi bi-gear"></i> Management
+                                </a>
+                                <ul class="dropdown-menu dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                                    <li><a asp-controller="Clients" asp-action="Index" class="dropdown-item"><i class="bi bi-file-person"></i> Clients</a></li>
+                                    <li><a asp-controller="Masters" asp-action="Index" class="dropdown-item"><i class="bi bi-emoji-smile"></i> Masters</a></li>
+                                    <li><a asp-controller="Procedures" asp-action="Index" class="dropdown-item"><i class="bi bi-hand-thumbs-up"></i> Procedures</a></li>
+                                </ul>
+                            </li>
+                        }
+                        
                     </ul>
 
                     <form class="form-check-inline my-2 my-lg-0" asp-controller="Reservations" asp-action="Filter" style="padding-right: 25px;">
@@ -43,29 +44,7 @@
                         <button class="btn btn-outline-success my-2 my-sm-0" type="submit"><i class="bi bi-search"></i></button>
                     </form>
 
-                    <a class="btn btn-outline-success my-2 my-sm-0"asp-controller="Account" asp-action="Login">
-                        <i class="bi bi-box-arrow-in-right"></i> Log in
-                    </a>
-
-                    <a class="btn btn-outline-primary my-2 my-sm-0" asp-controller="Account" asp-action="Register">
-                        <i class="bi bi-person-plus"></i> Register
-                    </a>
-
-
-                    @*User profile section*@
-                    <div class="dropdown">
-                        <button class="btn btn-outline-success dropdown-toggle" type="button" id="profile-btn" aria-expanded="false">
-                            <i class="bi bi-person-badge"></i> Hello User
-                        </button>
-                        <ul class="dropdown-menu" aria-labelledby="profile-btn">
-                           @* <li>
-                                <a class="dropdown-item" asp-action="Index">
-                                    <i class="bg-info bi-list"></i>
-                                </a>
-                            </li>*@
-                        </ul>
-                    </div>
-
+                   <partial name="_Identity.cshtml"></>
                 </div>
             </div>
         </nav>
