--- a/Project_ASP.NET/Views/_ViewImports.cshtml
+++ b/Project_ASP.NET/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using Project_ASP.NET
 @using Project_ASP.NET.Models
+@using Microsoft.AspNetCore.Identity;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
